Bug 123780 - Inserting an image in LibreOffice Online causes assertion failure in LO
Summary: Inserting an image in LibreOffice Online causes assertion failure in LO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2019-03-01 08:40 UTC by How can I remove my account?
Modified: 2019-03-04 10:35 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description How can I remove my account? 2019-03-01 08:40:02 UTC
Description:
See reproduction steps.

Steps to Reproduce:
1. Build LibreOffice Online against a master build of LO core, and run it with 'make run'. 
2. In your browser, open in Online for instance the hello-world.odt document that 'make run' shows the URL for.
3. Insert > Local Image... . Choose some photo. The loolkit process handling the document hits an assertion failure at filter/source/svg/svgexport.cxx:699, in SVGFilter::implExportWriterTextGraphic().

Actual Results:
.

Expected Results:
.


Reproducible: Always


User Profile Reset: No



Additional Info:
.
Comment 1 Commit Notification 2019-03-01 12:48:53 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/5f4df4b39722b9b3aa45d669e932d054d264ffbf%5E%21

tdf#123780: Fix SVG export of Writer images

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.