tdf#123780: Fix SVG export of Writer images

Used for LO online to generate preview.

Change-Id: I25107bedecc5a60e6a3ac094b7defd5dcb822138