filter/source/svg/svgfilter.cxx
@@ -577,6 +577,13 @@ bool SVGFilter::filterWriterOrCalc( const Sequence< PropertyValue >& rDescriptor
     if (!xSelection.is())
         return false;
 
+    // Select only one draw page
+    uno::Reference< drawing::XDrawPagesSupplier > xDrawPagesSupplier( mxSrcDoc, uno::UNO_QUERY );
+    uno::Reference<drawing::XDrawPages> xDrawPages = xDrawPagesSupplier->getDrawPages();
+    uno::Reference< drawing::XDrawPage > xDrawPage( xDrawPages->getByIndex(0), uno::UNO_QUERY );
+    mSelectedPages.resize( 1 );
+    mSelectedPages[0] = xDrawPage;
+
     bool bGotSelection = xSelection->getSelection() >>= maShapeSelection;
 
     if (!bGotSelection)
@@ -589,13 +596,6 @@ bool SVGFilter::filterWriterOrCalc( const Sequence< PropertyValue >& rDescriptor
         if (!bGotSelection)
             return false;
     }
-
-    // Select only one draw page
-    uno::Reference< drawing::XDrawPagesSupplier > xDrawPagesSupplier( mxSrcDoc, uno::UNO_QUERY );
-    uno::Reference<drawing::XDrawPages> xDrawPages = xDrawPagesSupplier->getDrawPages();
-    uno::Reference< drawing::XDrawPage > xDrawPage( xDrawPages->getByIndex(0), uno::UNO_QUERY );
-    mSelectedPages.resize( 1 );
-    mSelectedPages[0] = xDrawPage;
 
     return implExport( rDescriptor );
 }
